--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-emotion",
+  "name": "planning",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,17 +8,20 @@
     "build": "next build",
     "start": "next start"
   },
-  "keywords": [],
-  "author": "Thomas Greco",
-  "license": "MIT",
-  "devDependencies": {
-    "@emotion/babel-preset-css-prop": "10.0.27"
-  },
   "dependencies": {
-    "@emotion/core": "10.0.35",
-    "@emotion/styled": "10.0.27",
-    "next": "latest",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0"
-  }
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
+    "next": "^10.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "@emotion/babel-preset-css-prop": "^11.0.0",
+    "@types/node": "^14.14.7",
+    "@types/react": "^16.9.56",
+    "typescript": "^4.0.5"
+  },
+  "keywords": [],
+  "author": "Clayton Duarte",
+  "license": "MIT"
 }
