--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "axios": "^0.21.0",
+    "ioredis": "^4.19.2",
     "next": "^10.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "@emotion/babel-preset-css-prop": "^11.0.0",
+    "@types/ioredis": "^4.17.7",
     "@types/node": "^14.14.7",
     "@types/react": "^16.9.56",
     "typescript": "^4.0.5"
