--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "^0.21.0",
     "ioredis": "^4.19.2",
     "next": "^10.0.1",
+    "pusher": "^4.0.1",
+    "pusher-js": "^7.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
