:construction: User and session creation

--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
+# [PUBLIC]
 NEXT_PUBLIC_PUSHER_KEY=1574297cde84e81218d9
+
+# [SECRETS]
+SESSION_SECRET=complex_password_at_least_32_characters_long
+
 PUSHER_SECRET=
 PUSHER_APPID=
+
 REDIS_URL=
