--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start",
-    "tsc": "yarn tsc"
+    "start": "next start"
   },
   "dependencies": {
     "@emotion/react": "^11.0.0",
