:package: Install next-auth

--- a/.env
+++ b/.env
@@ -1,10 +1,13 @@
 # [PUBLIC]
 NEXT_PUBLIC_PUSHER_KEY=1574297cde84e81218d9
+SESSION_SECRET=complex_password_at_least_32_characters_long
+NEXTAUTH_URL=http://localhost:3000
 
 # [SECRETS]
-SESSION_SECRET=complex_password_at_least_32_characters_long
-
 PUSHER_SECRET=
 PUSHER_APPID=
-
 REDIS_URL=
+
+
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=
