--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.0",
     "ioredis": "^4.19.2",
     "next": "^10.0.1",
+    "next-auth": "^3.1.0",
     "next-iron-session": "^4.1.10",
     "pusher": "^4.0.1",
     "pusher-js": "^7.0.1",
